#132 #133 #135 Add reference point type, size and color to mod settings